content/v1.3.0/en/api/campaign/ItemBarterBehavior.md
---
title: "ItemBarterBehavior"
---
<!-- BEGIN BREADCRUMB -->
**Home** → **API Index** → **Area** → `ItemBarterBehavior`
- [← Area / Back to campaign](./)
- [↑ API Index](../)
- [🏠 Home v1.3.0](../../)
- [⭐ Version Architecture](../../architecture/)
<!-- END BREADCRUMB -->
# ItemBarterBehavior

**Namespace:** TaleWorlds.CampaignSystem.CampaignBehaviors.BarterBehaviors
**Module:** TaleWorlds.CampaignSystem
**Type:** `public class ItemBarterBehavior : CampaignBehaviorBase`
**Base:** `CampaignBehaviorBase`
**File:** `TaleWorlds.CampaignSystem/CampaignBehaviors/BarterBehaviors/ItemBarterBehavior.cs`

## Overview

`ItemBarterBehavior` lives in `TaleWorlds.CampaignSystem.CampaignBehaviors.BarterBehaviors` and exposes the state, behavior, or workflow entry points of that subsystem to mod developers through its public members. Read its properties as “what state it owns” and its methods as “what actions it allows”.

## Mental Model

Start from namespace `TaleWorlds.CampaignSystem.CampaignBehaviors.BarterBehaviors` to place it in the stack, then inspect its public methods: if it mainly exposes Get/Set members, it is likely a state object; if it centers on Create/Apply/Execute verbs, it behaves more like a service or workflow entry point.

## Key Methods

### RegisterEvents
`public override void RegisterEvents()`

**Purpose:** Handles logic related to `register events`.

### SyncData
`public override void SyncData(IDataStore dataStore)`

**Purpose:** Handles logic related to `sync data`.

### CheckForBarters
`public void CheckForBarters(BarterData args)`

**Purpose:** Handles logic related to `check for barters`.

### GetClosestSettlements
`public List<Settlement> GetClosestSettlements(Vec2 position)`

**Purpose:** Gets the current value of `closest settlements`.

### CompareTo
`public int CompareTo(ItemBarterBehavior.SettlementDistanceCache.SettlementDistancePair other)`

**Purpose:** Handles logic related to `compare to`.

## Usage Example

```csharp
var value = new ItemBarterBehavior();
value.RegisterEvents();
```

## See Also

- [Complete Class Catalog](../catalog)